# ChangeLog for dev-ruby/zentest
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/zentest/ChangeLog,v 1.12 2007/01/05 00:30:50 kloeri Exp $

  05 Jan 2007; Bryan Østergaard <kloeri@gentoo.org> zentest-3.3.0.ebuild,
  zentest-3.4.2.ebuild:
  Stable on ia64.

  23 Dec 2006; Peter Weller <welp@gentoo.org> zentest-3.3.0.ebuild:
  Stable on amd64 wrt bug #158580

  23 Dec 2006; Andrej Kacian <ticho@gentoo.org> zentest-3.3.0.ebuild:
  Stable on x86, bug #158580.

*zentest-3.4.2 (18 Dec 2006)

  18 Dec 2006; Hans de Graaff <graaff@gentoo.org> +zentest-3.4.2.ebuild:
  Version bump.

  04 Dec 2006; Hans de Graaff <graaff@gentoo.org> zentest-3.4.1.ebuild:
  Add ~amd64 keyword.

*zentest-3.4.1 (03 Dec 2006)

  03 Dec 2006; Nguyễn Thái Ngọc Duy <pclouds@gentoo.org>
  +zentest-3.4.1.ebuild:
  Bumped 3.4.1, #153383. Ebuild by
  Guillaume Benny <guillaume.benny@sympatico.ca>

*zentest-3.3.0 (28 Aug 2006)

  28 Aug 2006; Nguyễn Thái Ngọc Duy <pclouds@gentoo.org>
  +zentest-3.3.0.ebuild:
  Version bump (Hans de Graaff <hans@degraaff.org> #144387)

  17 Apr 2006; Caleb Tennis <caleb@gentoo.org> -zentest-2.4.0.ebuild,
  -zentest-3.0.0.ebuild:
  remove old versions

*zentest-3.2.0 (12 Apr 2006)

  12 Apr 2006; Caleb Tennis <caleb@gentoo.org> +zentest-3.2.0.ebuild:
  version bump

  30 Mar 2006; Aron Griffis <agriffis@gentoo.org> zentest-3.0.0.ebuild:
  Mark 3.0.0 ~ia64

*zentest-3.0.0 (09 Mar 2006)

  09 Mar 2006; Caleb Tennis <caleb@gentoo.org> +zentest-3.0.0.ebuild:
  version bump, switch to gems format

*zentest-2.4.0 (12 Jan 2006)

  12 Jan 2006; Caleb Tennis <caleb@gentoo.org> +files/zentest-dirfix.diff,
  +files/zentest-fixrubyloc.diff, +metadata.xml, +zentest-2.4.0.ebuild:
  Inital import
