@@ -1,0 +1,3 @@
+MD5 5d8c2630379e8d8f3546e1828f67692d ZenTest-3.4.3.gem 51712
+RMD160 034e56a1754fbf44d20d850601a61466ac014bfb ZenTest-3.4.3.gem 51712
+SHA256 57bc771c34692746257d775a80765d9ec6fe2c97b7477f0a5930d4cb154b4724 ZenTest-3.4.3.gem 51712
