@@ -1,6 +1,12 @@
 # ChangeLog for dev-ruby/zentest
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/zentest/ChangeLog,v 1.12 2007/01/05 00:30:50 kloeri Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/zentest/ChangeLog,v 1.13 2007/01/06 14:15:08 graaff Exp $
+
+*zentest-3.4.3 (06 Jan 2007)
+
+  06 Jan 2007; Hans de Graaff <graaff@gentoo.org> -zentest-3.2.0.ebuild,
+  +zentest-3.4.3.ebuild:
+  Version bump; remove old version
 
   05 Jan 2007; Bryan Østergaard <kloeri@gentoo.org> zentest-3.3.0.ebuild,
   zentest-3.4.2.ebuild:
